--- a/package.json
+++ b/package.json
@@ -23,48 +23,48 @@
   "author": "doara55 <63993563+doara55@users.noreply.github.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "7.11.6",
-    "@types/express": "4.17.8",
-    "@types/helmet": "0.0.48",
-    "@types/jest": "26.0.14",
+    "@babel/core": "7.12.3",
+    "@types/express": "4.17.9",
+    "@types/helmet": "4.0.0",
+    "@types/jest": "26.0.15",
     "@types/node-fetch": "2.5.7",
-    "@typescript-eslint/eslint-plugin": "4.4.0",
-    "@typescript-eslint/parser": "4.4.0",
-    "@vue/compiler-sfc": "3.0.0",
+    "@typescript-eslint/eslint-plugin": "4.7.0",
+    "@typescript-eslint/parser": "4.7.0",
+    "@vue/compiler-sfc": "3.0.2",
     "@vue/eslint-config-prettier": "6.0.0",
     "@vue/eslint-config-typescript": "7.0.0",
-    "@vue/test-utils": "2.0.0-beta.5",
-    "babel-jest": "26.5.2",
-    "css-loader": "4.3.0",
-    "eslint": "7.10.0",
-    "eslint-config-prettier": "6.12.0",
+    "@vue/test-utils": "2.0.0-beta.9",
+    "babel-jest": "26.6.3",
+    "css-loader": "5.0.1",
+    "eslint": "7.13.0",
+    "eslint-config-prettier": "6.15.0",
     "eslint-plugin-prettier": "3.1.4",
-    "eslint-plugin-vue": "7.0.1",
+    "eslint-plugin-vue": "7.1.0",
     "html-webpack-plugin": "4.5.0",
-    "jest": "26.5.2",
+    "jest": "26.6.3",
     "jest-serializer-vue": "2.0.2",
     "node-sass": "4.14.1",
     "npm-run-all": "4.1.5",
     "prettier": "2.1.2",
-    "sass-loader": "10.0.2",
-    "style-loader": "1.3.0",
-    "ts-jest": "26.4.1",
-    "ts-loader": "8.0.4",
+    "sass-loader": "10.1.0",
+    "style-loader": "2.0.0",
+    "ts-jest": "26.4.4",
+    "ts-loader": "8.0.11",
     "ts-node": "9.0.0",
-    "typescript": "4.0.3",
-    "url-loader": "4.1.0",
-    "vue": "3.0.0",
-    "vue-jest": "5.0.0-alpha.4",
-    "vue-loader": "16.0.0-beta.8",
+    "typescript": "4.0.5",
+    "url-loader": "4.1.1",
+    "vue": "3.0.2",
+    "vue-jest": "5.0.0-alpha.5",
+    "vue-loader": "16.0.0-rc.1",
     "vue-template-compiler": "2.6.12",
-    "webpack": "4.44.2",
-    "webpack-cli": "3.3.12",
+    "webpack": "5.4.0",
+    "webpack-cli": "4.2.0",
     "webpack-dev-server": "3.11.0",
     "webpack-node-externals": "2.5.2"
   },
   "dependencies": {
     "express": "4.17.1",
-    "helmet": "4.1.1",
+    "helmet": "4.2.0",
     "log4js": "6.3.0",
     "node-fetch": "2.6.1"
   }
